@@ -1,5 +1,7 @@
 package com.example.fromis_7_be.piece.service;
 
+import com.example.fromis_7_be.category.entity.Category;
+import com.example.fromis_7_be.category.repository.CategoryRepository;
 import com.example.fromis_7_be.piece.dto.PieceRequest;
 import com.example.fromis_7_be.piece.dto.PieceResponse;
 import com.example.fromis_7_be.piece.entity.Piece;
@@ -9,11 +11,13 @@ import com.example.fromis_7_be.user.repository.UserRepository;
 import com.example.fromis_7_be.userpiece.entity.UserPiece;
 import com.example.fromis_7_be.userpiece.repository.UserPieceRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,13 +25,15 @@ public class PieceService {
     private final UserRepository userRepository;
     private final PieceRepository pieceRepository;
     private final UserPieceRepository userPieceRepository;
+    private final CategoryRepository categoryRepository;
 
     public void createPieceByUserId(Long userId, PieceRequest.PieceCreateRequest req){
-        User user =userRepository.findById(userId)
+        User user = userRepository.findById(userId)
                 .orElseThrow(() -> new NoSuchElementException("찾으시는 User 정보: " + userId + "가 존재하지 않습니다."));
         Piece piece = Piece.from(req.getTitle(), req.getMemberNames(), req.getColor(), req.getStartYear(),
                 req.getStartMonth(), req.getStartDay(), req.getEndYear(), req.getEndMonth(), req.getEndDay());
         pieceRepository.save(piece);
+
         UserPiece userPiece = UserPiece.builder()
                 .user(user)
                 .piece(piece)
@@ -41,21 +47,27 @@ public class PieceService {
                 .orElseThrow(() -> new NoSuchElementException("\"찾으시는 User 정보: \" + userId + \"가 존재하지 않습니다.\""));
 
         List<Piece> pieces = pieceRepository.findAllByUser(user);
+        List<Category> highlightCategories = categoryRepository.findByHighlight(PageRequest.of(0, 4));
 
         return pieces.stream()
-                .map(PieceResponse.PieceReadResponse::from)
-                .toList();
+                .map(piece -> {
+                    PieceResponse.PieceReadResponse response = PieceResponse.PieceReadResponse.from(piece);
+                    response.setCategories(highlightCategories); // 하이라이트 카테고리 추가
+                    return response;
+                })
+                .collect(Collectors.toList());
     }
     public PieceResponse.PieceReadResponse update(Long pieceId, PieceRequest.PieceCreateRequest req){
-        Optional<Piece> b = pieceRepository.findById(pieceId);
-        Piece piece = b.get();
+        Piece piece = pieceRepository.findById(pieceId)
+                .orElseThrow(() -> new NoSuchElementException("Piece ID " + pieceId + "를 찾을 수 없습니다."));
+
         piece.update(req.getTitle(), req.getMemberNames(), req.getColor(), req.getStartYear(),
                 req.getStartMonth(), req.getStartDay(), req.getEndYear(), req.getEndMonth(), req.getEndDay());
         pieceRepository.save(piece);
 
         return new PieceResponse.PieceReadResponse(piece.getId(), piece.getTitle(), piece.getMemberNames(),
                 piece.getColor(), piece.getStartYear(), piece.getStartMonth(), piece.getStartDay(), piece.getEndYear(),
-                piece.getEndMonth(), piece.getEndDay());
+                piece.getEndMonth(), piece.getEndDay(), piece.getCategories());
     }
     public void delete(Long pieceId){
         Piece piece = pieceRepository.findById(pieceId).orElseThrow(IllegalAccessError::new);
